src/components/Navigation.module.css
.nav {
    background: #ffffff;
    display: grid;
    height: fit-content;
    padding: 0px 0px;
    grid-template-columns: 1fr 1fr;
    height: 80px;
}

.nav-left {
    pointer-events: none;
    display: flex;
    height: 100%;
    justify-content: flex-start;
    align-items: center;
    font-size: 2rem;
}

.nav-right {
    align-items: center;
    padding-right: 20px;
    display: flex;
    height: 100%;
    justify-content: flex-end;
    column-gap: 30px;
}

.button {
    text-decoration: none;
    color: black;
    font-size: 1.2rem;
    height: fit-content;
    border-bottom: 2px solid #9c5cff;
    animation: nav-color-default 0.2s;
    animation-fill-mode: forwards;
    transition: transform 0.1s ease-in;
}

.button:hover {
    transform: translateY(-5px);
    cursor: pointer;
    animation: nav-color 0.2s;
    animation-fill-mode: forwards;
    animation-name: example2;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}

.icon {
    margin-left: 70px;
}

.name {
    letter-spacing: 3px;
    pointer-events: auto;
    font-weight: bolder;
    font-size: 2.2rem;
    /* color: #9c5cff; */
    animation-name: example;
    animation-duration: 6s;
    animation-iteration-count: infinite;
    text-shadow: 1.5px 1.5px black;
    transition: color 0.1s ease-out;
    padding-left: 0px;
    margin-left: 20px;
    user-select: none;
    text-decoration: none;
}

.name:hover {
    cursor: default;
    animation-duration: 0s;
    color: #ffcb5c;
}

.name:active {
    color: #d3a94d;
}

@keyframes example {
    0% {
        color: #9c5cff;
    }

    50% {
        color: #9c5cff;
    }

    75% {
        color: rgb(247, 0, 255);
    }

    100% {
        color: #9c5cff;
    }
}

@keyframes example2 {
    0% {
        border-color: #9c5cff;
    }

    25% {
        border-color: rgb(247, 0, 255);
    }

    50% {
        border-color: #9c5cff;
    }

    75% {
        border-color: rgb(247, 0, 255);
    }

    100% {
        border-color: #9c5cff;
    }
}

@keyframes nav-color-default {
    from {
        border-color: #9c5cff;
    }

    to {
        border-color: #ffffff;
    }
}

@media screen and (max-width: 1250px) {
    .nav {
        grid-template-columns: 1fr 2fr;
    }
}

